--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
-      - app_network
+      - proxy
     healthcheck:
       test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER:-admin}"]
       interval: 5s
@@ -43,7 +43,7 @@ services:
     command: >
       sh -c "npx prisma migrate deploy && npm start"
     networks:
-      - app_network
+      - proxy
 
   client:
     build:
@@ -56,7 +56,7 @@ services:
     container_name: church_cms_client
     restart: always
     networks:
-      - app_network
+      - proxy
 
   nginx:
     image: nginx:alpine
@@ -70,11 +70,13 @@ services:
       - server
       - client
     networks:
-      - app_network
+      - proxy
+    labels:  
+      - "traefik.enable=true" 
+      - "traefik.http.routers.staging-connect.rule=Host(`staging-connect.localhost`) || Host(`staging-connect.hows-tine.com`)"
+      - "traefik.http.routers.staging-connect.entrypoints=web"
+      - "traefik.http.services.staging-connect.loadbalancer.server.port=80"
 
 volumes:
   postgres_data:
 
-networks:
-  app_network:
-    driver: bridge
