--- a/client/.env.example
+++ b/client/.env.example
@@ -3,5 +3,7 @@ VITE_API_URL="http://localhost:3000/api"
 
 # App Configuration
 VITE_APP_NAME="Church Management System"
-VITE_SUPERTOKENS_API_DOMAIN="http://localhost:3000"
-VITE_SUPERTOKENS_WEBSITE_DOMAIN="http://localhost:5173"
+
+# Domain Configuration (for SuperTokens)
+VITE_API_DOMAIN="http://localhost:3000"
+VITE_WEBSITE_DOMAIN="http://localhost:5173"
