feat: Add SuperTokens service and database initialization, updating client and server configurations.

--- a/client/.env.example
+++ b/client/.env.example
@@ -5,5 +5,5 @@ VITE_API_URL="http://localhost:3000/api"
 VITE_APP_NAME="Church Management System"
 
 # Domain Configuration (for SuperTokens)
-VITE_API_DOMAIN="http://localhost:3000"
-VITE_WEBSITE_DOMAIN="http://localhost:5173"
+VITE_SUPERTOKENS_API_DOMAIN="https://staging-connect.hows-tine.com"
+VITE_SUPERTOKENS_WEBSITE_DOMAIN="https://staging-connect.hows-tine.com"
