--- a/server/.env.example
+++ b/server/.env.example
@@ -5,7 +5,7 @@ PORT=3000
 DATABASE_URL="postgresql://user:password@localhost:5432/attendance_db?schema=public"
 
 # SuperTokens
-SUPERTOKENS_CONNECTION_URI="https://try.supertokens.com"
+SUPERTOKENS_CONNECTION_URI="http://supertokens:3567"
 SUPERTOKENS_API_KEY="your-api-key"
 
 # OAuth Providers
