--- a/docker-compose.supertokens.yml
+++ b/docker-compose.supertokens.yml
@@ -17,6 +17,11 @@ services:
       interval: 10s
       timeout: 5s
       retries: 5
+    labels:
+      - "traefik.enable=true"
+      - "traefik.http.routers.supertokens.rule=Host(`supertokens.hows-tine.com`)"
+      - "traefik.http.routers.supertokens.entrypoints=web"
+      - "traefik.http.services.supertokens.loadbalancer.server.port=3567"
 
 networks:
   proxy:
