--- a/nginx/nginx.prod.conf
+++ b/nginx/nginx.prod.conf
@@ -7,11 +7,11 @@ http {
     default_type  application/octet-stream;
 
     upstream client {
-        server client:80;
+        server church_cms_client:80;
     }
 
     upstream server {
-        server server:3000;
+        server church_cms_server:3000;
     }
 
     server {
