--- a/docker-compose.supertokens.yml
+++ b/docker-compose.supertokens.yml
@@ -13,7 +13,9 @@ services:
       POSTGRESQL_PASSWORD: "${POSTGRES_PASSWORD:-password}"
       POSTGRESQL_DATABASE_NAME: supertokens
     networks:
-      - proxy
+      proxy:
+        aliases:
+          - supertokens
     healthcheck:
       test: >
         bash -c 'exec 3<>/dev/tcp/127.0.0.1/3567 && echo -e "GET /hello HTTP/1.1\r\nhost: 127.0.0.1:3567\r\nConnection: close\r\n\r\n" >&3 && cat <&3 | grep "Hello"'
